--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,6 +10,9 @@
   max-width: 1024px;
   margin: 20px 0px 100px 0px;
 }
+.headerContainer.listMode {
+  margin: 20px 0px 0px 0px;
+}
 .headerList {
   display: flex;
   gap: 40px;
@@ -68,5 +71,42 @@
 }
 
 .headerSearchText {
-    color: lightgray;
+  color: lightgray;
+}
+
+.date {
+  position: absolute;
+  top: 50px;
+}
+.options {
+  position: absolute;
+  top: 50px;
+  background-color: #fff;
+  color: gray;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.6);
+}
+.optionItem {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+.optionCounter {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 12px;
+  color: black;
+}
+.optionCounterButton {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #0071c2;
+  cursor: pointer;
+  background-color: #fff;
+}
+.optionCounterButton:disabled {
+  cursor: not-allowed;
 }
