--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -77,6 +77,7 @@
 .date {
   position: absolute;
   top: 50px;
+  z-index: 2;
 }
 .options {
   position: absolute;
@@ -86,6 +87,7 @@
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.6);
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.6);
+  z-index: 2;
 }
 .optionItem {
   width: 200px;
