--- a/src/components/searchItem/searchItem.css
+++ b/src/components/searchItem/searchItem.css
@@ -52,7 +52,9 @@
 }
 .siDetails {
   flex: 1;
-  background-color: #fc0000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .siRating {
@@ -64,14 +66,31 @@
 }
 .siRating > button {
   background-color: #003b95;
+  color: white;
   border-radius: 5px;
-  border: none;padding: 3px;
+  border: none;
+  padding: 5px;
+  font-weight: bold;
 }
 .siDetailTexts {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 .siPrice {
+  font-size: 24px;
 }
 .siTaxOp {
+  font-size: 12px;
+  color: #595959;
 }
 .siCheckButton {
+  background-color: #006ce4;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  padding: 10px 3px;
+  cursor: pointer;
 }
