--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -95,3 +95,48 @@
   cursor: pointer;
   border-radius: 5px;
 }
+
+.slider {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+}
+.sliderWrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sliderImg {
+  user-select: none;
+
+  width: 80%;
+  height: 85vh;
+  object-fit: contain;
+}
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 30px;
+  color: #c6081d;
+  cursor: pointer;
+  border-radius: 100%;
+  border: rgb(29, 29, 29) solid 1px;
+}
+
+.arrow {
+  margin: 20px;
+  font-size: 50px;
+  border-radius: 100%;
+  color: lightgray;
+  border: rgb(29, 29, 29) solid 1px;
+  cursor: pointer;
+}
