--- a/src/components/featuredProperties/featuredProperties.css
+++ b/src/components/featuredProperties/featuredProperties.css
@@ -15,10 +15,11 @@
 .fpImg {
   color: #333;
   width: 100%;
+  /* height: 250px;
+  object-fit: cover; */
 }
 .fpName {
   color: #333;
-
   font-weight: bold;
 }
 .fpCity {
