--- a/src/components/featuredProperties/featuredProperties.css
+++ b/src/components/featuredProperties/featuredProperties.css
@@ -15,8 +15,8 @@
 .fpImg {
   color: #333;
   width: 100%;
-  /* height: 250px;
-  object-fit: cover; */
+  height: 250px;
+  object-fit: cover;
 }
 .fpName {
   color: #333;
