--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -8,10 +8,14 @@
 .rContainer {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
   width: 250px;
+  height: auto;
 }
 
+.rContainer > label {
+  font-size: 13px;
+}
 .rInput {
   height: 20px;
   padding: 10px;
@@ -32,6 +36,16 @@
   font-family: Helvetica, Arial, sans-serif;
   font-size: 13px;
   text-align: center;
+}
+.rContainer > p {
+  font-weight: bold;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  text-align: center;
+}
+.loginHere {
+  text-decoration: none;
+  color: #006ce4;
 }
 .rButton:disabled {
   background-color: #0071c28c;
