--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -5,7 +5,7 @@
   justify-content: center;
 }
 
-.rContainer {
+.rgContainer {
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -13,7 +13,7 @@
   height: auto;
 }
 
-.rContainer > label {
+.rgContainer > label {
   font-size: 13px;
 }
 .rInput {
@@ -30,14 +30,14 @@
   cursor: pointer;
   border-radius: 5px;
 }
-.rContainer > span {
+.rgContainer > span {
   color: #d4111e;
   font-weight: bold;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 13px;
   text-align: center;
 }
-.rContainer > p {
+.rgContainer > p {
   font-weight: bold;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 13px;
